--- a/photo.html
+++ b/photo.html
@@ -153,15 +153,16 @@
 		<div class="message_text">Фото</div>
 		<!-- <img src="img/message_media.png" alt="HTML5" style="vertical-align: middle;" width="320" height="60"/></div> -->
 		<div class="message_text1">Фото</div>
-		
+	</div>
+</div>
+
+<div class = "message_phone">
+	<div class="container">
 		<div class="message1_img_phone">
 		<img  src="img/message_media.png" alt="HTML5" style="vertical-align: middle;" width="375" height="70"/></div> 
 		<div class="message1_text_phone">Фото</div>
 	</div>
 </div>
-
-
-
 
 <div class="photo_table">
 	<div class="container">
@@ -188,6 +189,32 @@
 	</div>
 </div>
 
+<div class="photo_table_phone">
+	<div class="container">
+		<table class="photo_table_2">	
+			<tr>
+				<td>
+					<div class = "photo_table_home">
+						<a href="C:/Users/Admin/Desktop/Diplom/photo.dom.html"/>		
+						<img src="img/photo_home.png" alt="HTML5" class = "photo_table_home"/>
+							<div class="home_text">Наш дом</div>
+							<div class="photo_table_home_bg"></div>
+					</div>
+				</td>
+			</tr>
+			<tr>	
+				<td>
+					<div class = "photo_table_gr">
+						<a href="C:/Users/Admin/Desktop/Diplom/photo.gr.html"/>	
+						<img src="img/photo_gr.png" alt="HTML5" class = "photo_table_home"/> 	
+							<div class="gr_text">Наши бабушки и<br>дедушки</div>
+							<div class="photo_table_gr_bg"></div>
+					</div>
+				</td>
+			</tr>
+		</table>
+	</div>
+</div>
 <!---- Доп кнопки ----->
 <!---- Кн поднятия ---->
 <div id="button_up"><img src="img/up.png"/></div>
@@ -266,8 +293,8 @@ var h_hght1 = 0; // высота шапки
 				<th rowspan="3" width="300px" height="297px">
 				
 					<div class = "img_ma">
-					<a href="https://www.instagram.com/moskvina.a_/?hl=rusrc=">
-					<img src="img/ma.png" alt="HTML5"></div>
+					<a href="https://www.instagram.com/moskvina.a_/?hl=rusrc="/>
+					<img src="img/footer/ma.png" alt="HTML5"/></div>
 				</th>
 				<th width="350px">
 					<div class = "TheMainThing_footer">
@@ -286,15 +313,15 @@ var h_hght1 = 0; // высота шапки
 			<tr>
 			<td>
 				<div class = "img_strip">
-					<img src="img/strip.png" alt="HTML5"></div>
+					<img src="img/footer/strip.png" alt="HTML5"/></div>
 			</td>
 			<td>
 				<div class = "img_strip">
-					<img src="img/strip.png"alt="HTML5"></div>
+					<img src="img/footer/strip.png"alt="HTML5"/></div>
 			</td>
 			<td>
 				<div class = "img_strip">
-					<img src="img/strip.png" alt="HTML5"></div>
+					<img src="img/footer/strip.png" alt="HTML5"/></div>
 			</td>
 			</tr>
 			
@@ -304,7 +331,7 @@ var h_hght1 = 0; // высота шапки
 						<tr>
 							<td>
 								<div class="img_footer">
-								<img src="img/gps.png" alt="HTML5" style="vertical-align: middle;"/>
+								<img src="img/footer/gps.png" alt="HTML5" style="vertical-align: middle;"/>
 							</td>
 							<td>
 								<div class="_">
@@ -314,9 +341,8 @@ var h_hght1 = 0; // высота шапки
 						</tr>
 						<tr>
 							<td>
-							</div>
 								<div class="img_footer">
-								<img src="img/phone.png" alt="HTML5" style="vertical-align: middle;"/>
+								<img src="img/footer/phone.png" alt="HTML5" style="vertical-align: middle;"/>
 							</td>
 							<td>
 							<div class="_1">
@@ -327,7 +353,7 @@ var h_hght1 = 0; // высота шапки
 						<tr>
 							<td>
 								<div class="img_footer">
-								<img src="img/1message.png" alt="HTML5" style="vertical-align: middle;"/>
+								<img src="img/footer/1message.png" alt="HTML5" style="vertical-align: middle;"/>
 							</td>
 							<td>
 							<div class="_">
@@ -357,11 +383,11 @@ var h_hght1 = 0; // высота шапки
 					<div class = "social_footer">
 						<div class="img_icon_footer">
 						<a href="https://www.facebook.com/grandpa.filipych">
-							<img src="img/f_icon.png"/></a>
+							<img src="img/footer/f_icon.png"/></a>
 						<a href="https://vk.com/club155151679">
-							<img src="img/vk_icon.png"/></a>
+							<img src="img/footer/vk_icon.png"/></a>
 						<a href="https://ok.ru/filipych">
-							<img src="img/o_icon.png"/></a>
+							<img src="img/footer/o_icon.png"/></a>
 						</div>
 					</div>
 				</td>
@@ -370,7 +396,7 @@ var h_hght1 = 0; // высота шапки
 	</div>
 </div>
 
-<div class = "footer_phone">
+<div class = "footer_phone_phone">
 	<div class="container">	
 		<table>
 			<tr>
