--- a/main.html
+++ b/main.html
@@ -54,22 +54,22 @@
 	<div class="container">
 		<nav class="menu">
 			<ul id="top-menu">
-				<li><a href="C:/Users/Admin/Desktop/Diplom/index.html" class="active-button">Главная</a></li>
-				<li><a class= "top_" href="C:/Users/Admin/Desktop/Diplom/photo.html">Фото</a></li>
+				<li><a href="index.html" class="active-button">Главная</a></li>
+				<li><a class= "top_" href="photo.html">Фото</a></li>
 				<li><div class= "top1" href="">Услуги▾
 					<div class="sub-menu1"></div>
 						<div class="sub-menu">
-							<a class= "top_0" href="C:/Users/Admin/Desktop/Diplom/1.html">Медицинский уход</a>
-							<a class= "top_0" href="C:/Users/Admin/Desktop/Diplom/2.html">Пансионат для инвалидов по зрению</a>
-							<a class= "top_0" href="C:/Users/Admin/Desktop/Diplom/3.html">Психоневрологический пансионат</a>
-							<a class= "top_0" href="C:/Users/Admin/Desktop/Diplom/4.html">Сестринский уход за пожилыми людьми</a>
+							<a class= "top_0" href="1.html">Медицинский уход</a>
+							<a class= "top_0" href="2.html">Пансионат для инвалидов по зрению</a>
+							<a class= "top_0" href="3.html">Психоневрологический пансионат</a>
+							<a class= "top_0" href="4.html">Сестринский уход за пожилыми людьми</a>
 						</div>
 					</div>
 				</li>
-				<li><a class= "top_" href="C:/Users/Admin/Desktop/Diplom/prices.html">Цены</a></li>
-				<li><a class= "top_" href="C:/Users/Admin/Desktop/Diplom/oformlenie.html">Оформление</a></li>
-				<li><a class= "top_" href="C:/Users/Admin/Desktop/Diplom/contacts.html">Контакты</a></li>
-				<li><a class= "top_" href="C:/Users/Admin/Desktop/Diplom/request.html">Отправить заявку</a></li>
+				<li><a class= "top_" href="prices.html">Цены</a></li>
+				<li><a class= "top_" href="oformlenie.html">Оформление</a></li>
+				<li><a class= "top_" href="contacts.html">Контакты</a></li>
+				<li><a class= "top_" href="request.html">Отправить заявку</a></li>
 			</ul>
 		</nav>
 	</div>	
