--- a/oformlenie.html
+++ b/oformlenie.html
@@ -69,13 +69,13 @@
 	<div class="container">
 		<nav class="menu">
 			<ul id="top-menu">
-				<li><a class= "top_" href="C:/Users/Admin/Desktop/Diplom/index.html">Главная</a></li>
-				<li><a class= "top_" href="C:/Users/Admin/Desktop/Diplom/photo.html">Фото</a></li>
+				<li><a class= "top_" href="index.html">Главная</a></li>
+				<li><a class= "top_" href="photo.html">Фото</a></li>
 				<li><div class= "top1" href="">Услуги▾
 					<div class="sub-menu1"></div>
 						<div class="sub-menu">
-							<a class= "top_0" href="C:/Users/Admin/Desktop/Diplom/1.html">Медицинский уход</a>
-							<a class= "top_0" href="C:/Users/Admin/Desktop/Diplom/2.html">Пансионат для инвалидов по зрению</a>
+							<a class= "top_0" href="1.html">Медицинский уход</a>
+							<a class= "top_0" href="2.html">Пансионат для инвалидов по зрению</a>
 							<a class= "top_0" href="C:/Users/Admin/Desktop/Diplom/3.html">Психоневрологический пансионат</a>
 							<a class= "top_0" href="C:/Users/Admin/Desktop/Diplom/4.html">Сестринский уход за пожилыми людьми</a>
 						</div>
