--- a/3.html
+++ b/3.html
@@ -74,22 +74,22 @@
 	<div class="container">
 		<nav class="menu">
 			<ul id="top-menu">
-				<li><a class= "top_" href="index.html">Главная</a></li>
-				<li><a class= "top_" href="photo.html">Фото</a></li>
+				<li><a class= "top_" href="C:/Users/Admin/Desktop/Diplom/index.html">Главная</a></li>
+				<li><a class= "top_" href="C:/Users/Admin/Desktop/Diplom/photo.html">Фото</a></li>
 				<li><div class= "top1" href="">Услуги▾
 					<div class="sub-menu1"></div>
 						<div class="sub-menu">
-							<a class= "top_0" href="1.html">Медицинский уход</a>
-							<a class= "top_0" href="2.html">Пансионат для инвалидов по зрению</a>
-							<a class= "active-button1" href="3.html">Психоневрологический пансионат</a>
-							<a class= "top_0" href="4.html">Сестринский уход за пожилыми людьми</a>
+							<a class= "top_0" href="C:/Users/Admin/Desktop/Diplom/1.html">Медицинский уход</a>
+							<a class= "top_0" href="C:/Users/Admin/Desktop/Diplom/2.html">Пансионат для инвалидов по зрению</a>
+							<a class= "active-button1" href="C:/Users/Admin/Desktop/Diplom/3.html">Психоневрологический пансионат</a>
+							<a class= "top_0" href="C:/Users/Admin/Desktop/Diplom/4.html">Сестринский уход за пожилыми людьми</a>
 						</div>
 					</div>
 				</li>
-				<li><a class= "top_" href="prices.html">Цены</a></li>
-				<li><a class= "top_" href="oformlenie.html">Оформление</a></li>
-				<li><a class= "top_" href="contacts.html">Контакты</a></li>
-				<li><a class= "top_" href="request.html">Отправить заявку</a></li>
+				<li><a class= "top_" href="C:/Users/Admin/Desktop/Diplom/prices.html">Цены</a></li>
+				<li><a class= "top_" href="C:/Users/Admin/Desktop/Diplom/oformlenie.html">Оформление</a></li>
+				<li><a class= "top_" href="C:/Users/Admin/Desktop/Diplom/contacts.html">Контакты</a></li>
+				<li><a class= "top_" href="C:/Users/Admin/Desktop/Diplom/request.html">Отправить заявку</a></li>
 			</ul>
 		</nav>
 	</div>	
@@ -110,25 +110,25 @@
 	
 	<img src="img/hamburger-menu/close_menu.png" class="menu__box_img_close" onclick="myFunction()" alt="HTML5" style="vertical-align: middle;"/>
 		
-		<li><a class="menu__item" href="index.html">Главная</a></li>
-		<li><a class= "menu__item" href="photo.html">Фото</a></li>
+		<li><a class="menu__item" href="C:/Users/Admin/Desktop/Diplom/index.html">Главная</a></li>
+		<li><a class= "menu__item" href="C:/Users/Admin/Desktop/Diplom/photo.html">Фото</a></li>
 			<li>
 				<a class="top1_mediaMyPhone" href="javascript:void(0);">Услуги▾
 				<div class="podmenu">
 					<div class="sub-menu1_mediaMyPhone"></div>
 						<div class="sub-menu_mediaMyPhone">
-							<a class= "top_0" href="1.html">Медицинский уход</a>
-							<a class= "top_0" href="2.html">Пансионат для инвалидов по зрению</a>
-							<a class= "top_0" href="3.html">Психоневрологический пансионат</a>
-							<a class= "top_0" href="4.html">Сестринский уход за пожилыми людьми</a>
+							<a class= "top_0" href="C:/Users/Admin/Desktop/Diplom/1.html">Медицинский уход</a>
+							<a class= "top_0" href="C:/Users/Admin/Desktop/Diplom/2.html">Пансионат для инвалидов по зрению</a>
+							<a class= "top_0" href="C:/Users/Admin/Desktop/Diplom/3.html">Психоневрологический пансионат</a>
+							<a class= "top_0" href="C:/Users/Admin/Desktop/Diplom/4.html">Сестринский уход за пожилыми людьми</a>
 						</div>
 				</div>
 				</a>
 			</li>
-			<li><a class= "menu__item" href="prices.html">Цены</a></li>
-			<li><a class= "menu__item" href="oformlenie.html">Оформление</a></li>
-			<li><a class= "menu__item" href="contacts.html">Контакты</a></li>
-			<li><a class= "menu__item" href="request.html">Отправить заявку</a></li>		
+			<li><a class= "menu__item" href="C:/Users/Admin/Desktop/Diplom/prices.html">Цены</a></li>
+			<li><a class= "menu__item" href="C:/Users/Admin/Desktop/Diplom/oformlenie.html">Оформление</a></li>
+			<li><a class= "menu__item" href="C:/Users/Admin/Desktop/Diplom/contacts.html">Контакты</a></li>
+			<li><a class= "menu__item" href="C:/Users/Admin/Desktop/Diplom/request.html">Отправить заявку</a></li>		
    <table>
 		<tr>
 			<td>
@@ -163,6 +163,7 @@
 		<img  src="img/message_media.png" alt="HTML5" style="vertical-align: middle;" width="375" height="70"/></div> 
 		<div class="message_text_phone">Психоневрологический<br>пансионат</div>
 	</div>
+</div>
 <!-------------------------------1 блок----------------------------->
 
 <div class="_3_services_1">
@@ -171,9 +172,11 @@
 			<tr>			
 				<td> 
 					<div class="_3_services_text_1_0">
-						<p>К старости многие люди приходят с набором болезней. Одни ограничивают физическую активность престарелых, вынуждают регулярно принимать целый набор лекарств. Другие накладывают отпечаток на психическое состояние и когнитивные способности пациента. Это становится проблемой для всей семьи больного человека.</p>
-						<p>Пациент с психоневрологическим заболеванием нуждается в уходе 24 часа 7 дней в неделю. Родственник, вынужденный за ним присматривать, теряет значительную часть своей жизни. Ему приходится бросить работу, уделять мало внимания семье, детям. Длительный контакт с человеком, не способным поддерживать простое человеческое общение, приводит к стрессу.</p>
-						<p>Но и бросить больного пенсионера без присмотра нельзя. Он беспомощен. Может неосознанно навредить себе или окружающим. Поможет в такой патовой ситуации пансионат для людей с психическими расстройствами «Филипыч». Здесь все создано для того, чтобы больной человек ощущал себя комфортно, получал нужную медицинскую помощь, был защищен и спокойно встретил глубокую старость.</p>
+						К старости многие люди приходят с набором болезней. Одни ограничивают физическую активность престарелых, вынуждают регулярно принимать целый набор лекарств. Другие накладывают отпечаток на психическое состояние и когнитивные способности пациента. Это становится проблемой для всей семьи больного человека.
+						<p></p>
+						Пациент с психоневрологическим заболеванием нуждается в уходе 24 часа 7 дней в неделю. Родственник, вынужденный за ним присматривать, теряет значительную часть своей жизни. Ему приходится бросить работу, уделять мало внимания семье, детям. Длительный контакт с человеком, не способным поддерживать простое человеческое общение, приводит к стрессу.
+						<p></p>
+						Но и бросить больного пенсионера без присмотра нельзя. Он беспомощен. Может неосознанно навредить себе или окружающим. Поможет в такой патовой ситуации пансионат для людей с психическими расстройствами «Филипыч». Здесь все создано для того, чтобы больной человек ощущал себя комфортно, получал нужную медицинскую помощь, был защищен и спокойно встретил глубокую старость.
 					</div>
 				</td>
 				<td>
@@ -198,10 +201,16 @@
 					<div class="_3_services_logo_2-1">
 						<h4>ПСИХОНЕВРОЛОГИЧЕСКИЙ ПАНСИОНАТ</h4>
 					</div>
+					<div class="_3_services_logo_2_phone">
+						<h4>ЧТО ПРЕДЛАГАЕТ<br>ПСИХОНЕВРОЛОГИЧЕСКИЙ ПАНСИОНАТ</h4>	
+					</div>	
 				</td>
 				<td>
 					<div class="_3_services_logo_3">
 						<h4>ДЛЯ ПОЖИЛЫХ</h4>
+					</div>
+					<div class="_2_services_logo_3_phone">
+						<h4>ЗА<br>СЛАБОВИДЯЩИМИ<br>ПАЦИЕНТАМИ</h4>	
 					</div>
 				</td>
 			</tr>
